--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,23 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Python / FastAPI
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+ENV/
+
+# Backend runtime
+.coverage*
+htmlcov/
+
+# Frontend builds
+frontend/node_modules/
+frontend/dist/
+
+# Editors
+.idea/
+.vscode/
+.DS_Store
