--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.39.1"
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
