--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.0",
+  "@supabase/supabase-js": "^2.48.0",
+  "openai": "^4.77.0"
+}
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-cron": "^3.0.3",
